--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -7,8 +7,18 @@
     <title>Methods for Adding CSS</title>
   </head>
   <body>
+    <link rel="01" href = "01.css">
     <div>Style me via the external method!</div>
+    
     <p>I would like to be styled with the internal method, please.</p>
+    <style>
+      p {
+        background-color: green;
+        color: white;
+        font-size: 18px;
+      }
+    </style>
     <button>Inline Method</button>
+    <button style ="color: black; background-color: orange; font-size: 18px;"></button>
   </body>
 </html>
