--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
-  </head>
-  <body>
     <link rel="01" href = "01.css">
-    <div>Style me via the external method!</div>
-    
-    <p>I would like to be styled with the internal method, please.</p>
     <style>
       p {
         background-color: green;
@@ -18,7 +13,13 @@
         font-size: 18px;
       }
     </style>
-    <button>Inline Method</button>
-    <button style ="color: black; background-color: orange; font-size: 18px;"></button>
+  </head>
+  <body>
+
+    <div>Style me via the external method!</div>
+    
+    <p>I would like to be styled with the internal method, please.</p>
+
+    <button style ="color: black; background-color: orange; font-size: 18px;">Inline Method</button>
   </body>
 </html>
