--- a/flex/04-flex-information/index.html
+++ b/flex/04-flex-information/index.html
@@ -10,24 +10,24 @@
   <body>
     <div class="title">Information!</div>
 
-    <div class ="images">
-      <div class = "one">
+    <div class ="container">
+      <div class = "image">
         <img src="./images/barberry.png" alt="barberry">
         <div class="text">This is a type of plant. We love this one.</div>
       </div>
       
-      <div class = "one">
+      <div class = "image">
         <img src="./images/chilli.png" alt="chili">
         <div class="text">This is another type of plant. Isn't it nice?</div>
       </div>
 
-      <div class = "one">
+      <div class = "image">
         <img src="./images/pepper.png" alt="pepper">
         <div class="text">We have so many plants. Yay plants.</div>
       </div>
 
 
-      <div class = "one"></div>
+      <div class = "image"></div>
         <img src="./images/saffron.png" alt="saffron">
         <div class="text">I'm running out of things to say about plants.</div>
       </div>
