--- a/flex/06-flex-layout/index.html
+++ b/flex/06-flex-layout/index.html
@@ -29,11 +29,11 @@
       </div>
     </div>
     <div class="footer">
-      <ul class="left">
+      <ul class="left-links">
         <li><a href="#">Advertising</a></li>
         <li><a href="#">Business</a></li>
       </ul>
-      <ul class="right">
+      <ul class="right-links">
         <li><a href="#">Privacy</a></li>
         <li><a href="#">Terms</a></li>
       </ul>
